--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <div class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -24,7 +24,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
 
     <div class="hero"></div>
     <main class="content">
